# backend/api/src/main/java/com/shoppiem/api/service/product/ProductServiceImpl.java
@@ -3,13 +3,18 @@ package com.shoppiem.api.service.product;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.shoppiem.api.ProductCreateResponse;
+import com.shoppiem.api.ProductFromDataRequest;
 import com.shoppiem.api.ProductRequest;
 import com.shoppiem.api.data.postgres.entity.ProductEntity;
 import com.shoppiem.api.data.postgres.repo.ProductRepo;
 import com.shoppiem.api.dto.ScrapingJobDto;
 import com.shoppiem.api.dto.ScrapingJobDto.JobType;
 import com.shoppiem.api.props.RabbitMQProps;
+import com.shoppiem.api.service.embedding.EmbeddingService;
+import com.shoppiem.api.service.parser.AmazonParser;
 import com.shoppiem.api.service.utils.ShoppiemUtils;
+import java.net.MalformedURLException;
+import java.net.URL;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.amqp.rabbit.core.RabbitTemplate;
@@ -26,10 +31,48 @@ public class ProductServiceImpl implements ProductService {
   private final ObjectMapper objectMapper;
   private final RabbitTemplate rabbitTemplate;
   private final RabbitMQProps rabbitMQProps;
+  private final AmazonParser amazonParser;
+  private final EmbeddingService embeddingService;
+
+  @Override
+  public ProductCreateResponse createProductFromData(
+      ProductFromDataRequest productFromDataRequest, boolean schedule) {
+    var url = cleanupUrl(productFromDataRequest.getProductUrl());
+    var productSku = parseProductSku(url);
+    var entity = productRepo.findByProductSku(productSku);
+    if (entity == null) {
+      entity = new ProductEntity();
+      entity.setProductSku(productSku);
+      entity.setNumReviews(productFromDataRequest.getNumReviews());
+      entity.setStarRating(productFromDataRequest.getStarRating());
+      entity.setNumQuestionsAnswered(productFromDataRequest.getNumQuestionsAnswered());
+      entity.setCurrency(productFromDataRequest.getCurrency());
+      entity.setImageUrl(productFromDataRequest.getImageUrl());
+      entity.setPrice(productFromDataRequest.getPrice());
+      entity.setProductUrl(url);
+      entity.setSeller(productFromDataRequest.getSeller());
+      entity.setTitle(ShoppiemUtils.truncate(productFromDataRequest.getTitle()));
+      entity.setDescription(productFromDataRequest.getDescription());
+      entity.setIsReady(false);
+      productRepo.save(entity);
+      if (schedule) {
+        final ProductEntity finalEntity = entity;
+        Thread.startVirtualThread(() -> embeddingService.embedProduct(finalEntity));
+        scheduleJobs(entity);
+      }
+    }
+    if (entity.getIsReady()) {
+      return new ProductCreateResponse()
+          .isReady(true);
+    }
+    return new ProductCreateResponse()
+        .inProgress(true);
+  }
 
   @Override
   public ProductCreateResponse createProduct(ProductRequest productRequest) {
-    var productSku = parseProductSku(productRequest.getProductUrl());
+    var url = cleanupUrl(productRequest.getProductUrl());
+    var productSku = parseProductSku(url);
     var entity = productRepo.findByProductSku(productSku);
     if (entity == null) {
       entity = new ProductEntity();
@@ -38,7 +81,7 @@ public class ProductServiceImpl implements ProductService {
       ScrapingJobDto job = new ScrapingJobDto();
       job.setProductSku(productSku);
       job.setId(ShoppiemUtils.generateUid());
-      job.setUrl(productRequest.getProductUrl());
+      job.setUrl(url);
       job.setType(JobType.PRODUCT_PAGE);
       try {
         String jobString = objectMapper.writeValueAsString(job);
@@ -62,6 +105,15 @@ public class ProductServiceImpl implements ProductService {
         .inProgress(true);
   }
 
+  private String cleanupUrl(String url) {
+    try {
+      URL parsedUrl = new URL(url);
+      return String.format("%s://%s%s", parsedUrl.getProtocol(), parsedUrl.getHost(), parsedUrl.getPath());
+    } catch (MalformedURLException e) {
+      return url;
+    }
+  }
+
   @Override
   public String parseProductSku(String url) {
     // Assume we are only dealing with Amazon product URLs
@@ -69,5 +121,11 @@ public class ProductServiceImpl implements ProductService {
     String skuPart = tokens[1];
     String sku = skuPart.split("/")[0];
     return sku;
+  }
+
+  @Override
+  public void scheduleJobs(ProductEntity productEntity) {
+    Thread.startVirtualThread(() -> amazonParser.scheduleQandAScraping(productEntity));
+    Thread.startVirtualThread(() -> amazonParser.scheduleInitialReviewScraping(productEntity));
   }
 }
