# backend/api/src/main/resources/openapi/openapi.json
@@ -70,6 +70,39 @@
           }
         }
       }
+    },
+    "/product-from-data": {
+      "post": {
+        "tags": [
+          "product"
+        ],
+        "summary": "Create a new product from input data",
+        "description": "Create a new product",
+        "operationId": "createProductFromData",
+        "requestBody": {
+          "required": true,
+          "description": "New product request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ProductFromDataRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Generic Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProductCreateResponse"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -112,6 +145,45 @@
         "properties": {
           "product_url": {
             "type": "string"
+          }
+        }
+      },
+      "ProductFromDataRequest":  {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "seller": {
+            "type": "string"
+          },
+          "product_url": {
+            "type": "string"
+          },
+          "image_url": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "price": {
+            "type": "number",
+            "format": "double"
+          },
+          "currency": {
+            "type": "string"
+          },
+          "num_reviews": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "num_questions_answered": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "star_rating": {
+            "type": "number",
+            "format": "double"
           }
         }
       },
